fix(component): Add backface visibility to SearchBar

--- a/app/components/form/SearchBar/styles.sass
+++ b/app/components/form/SearchBar/styles.sass
@@ -12,6 +12,7 @@
     border-radius: inherit
     text-align: inherit
     padding-left: 16px
+    backface-visibility: hidden
 
     &:focus::-webkit-input-placeholder
         transition: opacity 0.5s ease
